created pages folder

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <h1>Project Red</h1>
 
       <nav>
-        <a href="./index.html">Home</a>
-        <a href="./ranks.html">Ranks</a>
-        <a href="./crafting.html">Crafting</a>
-        <a href="./func.html">Functions</a>
+        <a href="#">Home</a>
+        <a href="./pages/ranks.html">Ranks</a>
+        <a href="./pages/crafting.html">Crafting</a>
+        <a href="./pages/func.html">Functions</a>
       </nav>
     </header>
     <hr>
