--- a/pages/crafting.html
+++ b/pages/crafting.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180"
-      href="favicon/apple-touch-icon.png">
+      href="../favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-      href="favicon/favicon-32x32.png">
+      href="../favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-      href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
+      href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
     <!-- favicon -->
     <title>Project Red | Crafting</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="../index.css" />
 
     <script>
       function drop(name) {
@@ -32,7 +32,7 @@
       <h1>Project Red Crafting</h1>
 
       <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./ranks.html">Ranks</a>
         <a href="./crafting.html">Crafting</a>
         <a href="./func.html">Functions</a>
@@ -116,12 +116,12 @@
         <h2>Default</h2>
         <h3 id="arrow">Arrow</h3>
         <p>Original recipe, but outputs one arrow instead of 4.</p>
-        <img src="images/crafting/default/arrow.png" width="400px">
+        <img src="../images/crafting/default/arrow.png" width="400px">
 
         <h3 id="door">Doors</h3>
         <p>Now with an iron ingot for the door handle, and results in two doors
           rather than 3.</p>
-        <img src="images/crafting/default/doors.gif" width="400px">
+        <img src="../images/crafting/default/doors.gif" width="400px">
       </section>
       <hr>
 
@@ -129,7 +129,7 @@
         <h2>Copper</h2>
         <h3 id="bow">Bow</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/copper/bow.png" width="400px">
+        <img src="../images/crafting/copper/bow.png" width="400px">
 
       </section>
       <hr>
@@ -138,11 +138,11 @@
         <h2>Iron</h2>
         <h3 id="iron_arrow">Arrow</h3>
         <p>Instead of flint, uses iron nuggets; outputs 4 arrows.</p>
-        <img src="images/crafting/iron/arrow.png" width="400px">
+        <img src="../images/crafting/iron/arrow.png" width="400px">
 
         <h3 id="door-rank">Doors</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/iron/rank_door.gif" width="400px">
+        <img src="../images/crafting/iron/rank_door.gif" width="400px">
       </section>
       <hr>
 
@@ -151,11 +151,11 @@
 
         <h3 id="brewing_stand">Brewing Stand</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/lapis/brewing_stand.gif" width="400px">
+        <img src="../images/crafting/lapis/brewing_stand.gif" width="400px">
 
         <h3 id="crossbow">Crossbow</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/lapis/crossbow.png" width="400px">
+        <img src="../images/crafting/lapis/crossbow.png" width="400px">
       </section>
       <hr>
 
@@ -164,39 +164,39 @@
 
         <h3 id="diamond_axe">Diamond Axe</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/axe.png" width="400px">
+        <img src="../images/crafting/diamond/axe.png" width="400px">
 
         <h3 id="diamond_boots">Diamond Boots</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/boots.png" width="400px">
+        <img src="../images/crafting/diamond/boots.png" width="400px">
 
         <h3 id="diamond_chestplate">Diamond Chestplate</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/shirt.png" width="400px">
+        <img src="../images/crafting/diamond/shirt.png" width="400px">
 
         <h3 id="diamond_helmet">Diamond Helmet</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/helmet.png" width="400px">
+        <img src="../images/crafting/diamond/helmet.png" width="400px">
 
         <h3 id="diamond_hoe">Diamond Hoe</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/hoe.png" width="400px">
+        <img src="../images/crafting/diamond/hoe.png" width="400px">
 
         <h3 id="diamond_leggings">Diamond Leggings</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/pants.png" width="400px">
+        <img src="../images/crafting/diamond/pants.png" width="400px">
 
         <h3 id="diamond_pickaxe">Diamond Pickaxe</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/pick.png" width="400px">
+        <img src="../images/crafting/diamond/pick.png" width="400px">
 
         <h3 id="diamond_shovel">Diamond Shovel</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/shovel.png" width="400px">
+        <img src="../images/crafting/diamond/shovel.png" width="400px">
 
         <h3 id="diamond_sword">Diamond Sword</h3>
         <p>Original recipe.</p>
-        <img src="images/crafting/diamond/sword.png" width="400px">
+        <img src="../images/crafting/diamond/sword.png" width="400px">
       </section>
     </main>
 
