--- a/pages/ranks.html
+++ b/pages/ranks.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180"
-      href="favicon/apple-touch-icon.png">
+      href="../favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-      href="favicon/favicon-32x32.png">
+      href="../favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-      href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
+      href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
     <!-- favicon -->
     <title>Project Red | Ranks</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="../index.css" />
   </head>
 
   <body>
@@ -22,7 +22,7 @@
     <header>
       <h1>Project Red Ranks</h1>
       <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./ranks.html">Ranks</a>
         <a href="./crafting.html">Crafting</a>
         <a href="./func.html">Functions</a>
