--- a/pages/crafting.html
+++ b/pages/crafting.html
@@ -11,7 +11,7 @@
       href="../favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
       href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/site.webmanifest">
+    <link rel="manifest" href="../favicon/manifest.webmanifest">
     <!-- favicon -->
     <title>Project Red | Crafting</title>
     <link rel="stylesheet" type="text/css" href="../index.css" />
